# stromboli

./: Cargo.toml  README.md
src/: actions.rs  apps.rs  error.rs  install.rs  languages.rs  lib.rs  logger.rs  logging.rs  os_package_managers.rs  package.rs  package_manager.rs
src/actions/: download.rs  gunzip.rs  install.rs  tar_gunzip.rs
src/actions/install/: method.rs
src/actions/install/method/: git.rs  github_release.rs  remote_shell_script.rs
src/apps/: app.rs  plugin_manager.rs  tmux.rs
src/apps/app/: git_delta.rs  neovim.rs  starship.rs  tmux.rs
src/apps/plugin_manager/: tpm.rs
src/install/: method.rs
src/install/method/: github_release.rs  remote_shell_script.rs
src/languages/: language.rs  language_version_manager.rs  package_manager.rs  version_manager.rs
src/languages/language/: ruby.rs
src/languages/language_version_manager/: chruby.rs  ruby_install.rs
src/languages/package_manager/: rubygems.rs
src/languages/version_manager/: chruby.rs  ruby_install.rs
src/os_package_managers/: homebrew.rs  os_package_manager.rs
src/os_package_managers/os_package_manager/: apt.rs  dpkg.rs  homebrew.rs
src/package_manager/: apt.rs  dpkg.rs  homebrew.rs  ruby_install.rs  rubygems.rs
