[package]
name = "stromboli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0"
git2 = "0.14"
dirs = "4.0"
log = "0.4"
reqwest = { version = "0.11", features = ["blocking"] }
thiserror = "1.0"
